fix bugs svn version 1998

--- a/Code/GeometryWidgets/dialogMakeRevol.ui
+++ b/Code/GeometryWidgets/dialogMakeRevol.ui
@@ -153,7 +153,7 @@
    <item row="3" column="0">
     <widget class="QGroupBox" name="groupBox_2">
      <property name="title">
-      <string>Axis</string>
+      <string>Direction</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_5">
       <item row="0" column="0">
