--- a/Code/GeometryWidgets/dialogMakeMatrix.ui
+++ b/Code/GeometryWidgets/dialogMakeMatrix.ui
@@ -172,6 +172,9 @@
                  <property name="text">
                   <string>Y axis</string>
                  </property>
+                 <property name="checked">
+                  <bool>true</bool>
+                 </property>
                 </widget>
                </item>
                <item>
@@ -180,7 +183,7 @@
                   <string>Z axis</string>
                  </property>
                  <property name="checked">
-                  <bool>true</bool>
+                  <bool>false</bool>
                  </property>
                 </widget>
                </item>
